--- a/popup.html
+++ b/popup.html
@@ -8,29 +8,29 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      min-height: 200px; /* Minimum height */
-      min-width: 300px; /* Minimum width for the popup */
+      min-height: 200px;
+      min-width: 300px;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #1f1b24; /* Dark grey-purple background */
-      color: #f8f8f2; /* Barely-purple white text */
+      background-color: #1f1b24;
+      color: #f8f8f2;
       margin: 0;
-      padding: 10px; /* Add some padding */
+      padding: 10px;
       font-size: 1.1em;
     }
     select, button {
-      width: 100%; /* Make select and button fill the container width */
-      box-sizing: border-box; /* Include padding and border in the width */
+      width: 100%;
+      box-sizing: border-box;
       margin: 10px 0;
       padding: 10px;
-      border: 1px solid #6a4f7d; /* Thin lavender-purple outlines */
-      background-color: #1f1b24; /* Dark grey-purple background for select */
+      border: 1px solid #6a4f7d;
+      background-color: #1f1b24;
       color: inherit;
       font-size: 1em;
     }
     button {
       cursor: pointer;
-      padding: 15px 30px; /* Larger button */
-      font-size: 1.1em; /* Slightly larger text in button */
+      padding: 15px 30px;
+      font-size: 1.1em;
     }
     select:focus, button:focus {
       outline: none;
